[package]
name = "Iced_example"
version = "0.1.0"
edition = "2021"


[dependencies]
iced = { version = "0.13.1", features = ["tokio", "canvas"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14.1"

[[bin]]
name = "fileOperation"
path = "bin/fileOperation/src/main.rs"


[[bin]]
name = "inputVariant"
path = "bin/inputVariant/main.rs"


[[bin]]
name = "multiWindows"
path = "bin/multiWindows/main.rs"